# speculect

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: README.md  demo.sh  wow_demo.py
examples/fixtures/: draft-500m.gguf  incompatible-arch.gguf  target-7b.gguf
src/speculect/: __init__.py  bench.py  cli.py  compat.py  gguf.py  ollama.py
tests/: conftest.py  test_bench.py  test_cli.py  test_compat.py  test_gguf.py  test_ollama.py
