[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speculect"
version = "0.1.0"
description = "Automatically pairs a small local \"draft\" model with your target model for speculative decoding — picks the best available match from what you already have pulled in Ollama, no manual trial-and-error."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ilya Tsvirov" }]
keywords = [
    "speculative-decoding",
    "llm",
    "ollama",
    "llama-cpp",
    "gguf",
    "local-llm",
    "inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
demo = ["rich>=13.0"]

[project.scripts]
speculect = "speculect.cli:main"

[project.urls]
Homepage = "https://github.com/tsvirov/speculect"
Issues = "https://github.com/tsvirov/speculect/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/speculect"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
